<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="connect"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_connect"
        android:shortcutShortLabel="@string/shortcut_connect_short"
        android:shortcutLongLabel="@string/shortcut_connect_long">
        <intent
            android:action="io.weave.client.action.CONNECT"
            android:targetClass="io.weave.client.MainActivity"
            android:targetPackage="io.weave.client" />
    </shortcut>
    <shortcut
        android:shortcutId="disconnect"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_disconnect"
        android:shortcutShortLabel="@string/shortcut_disconnect_short"
        android:shortcutLongLabel="@string/shortcut_disconnect_long">
        <intent
            android:action="io.weave.client.action.DISCONNECT"
            android:targetClass="io.weave.client.MainActivity"
            android:targetPackage="io.weave.client" />
    </shortcut>
    <shortcut
        android:shortcutId="import"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_import"
        android:shortcutShortLabel="@string/shortcut_import_short"
        android:shortcutLongLabel="@string/shortcut_import_long">
        <intent
            android:action="io.weave.client.action.IMPORT"
            android:targetClass="io.weave.client.MainActivity"
            android:targetPackage="io.weave.client" />
    </shortcut>
</shortcuts>
